<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.example.marichal.manillas.Principal">

    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="480dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="6dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Titulo"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

          <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="horizontal">

                    <TextView
                        android:textStyle="bold"
                        android:textColor="#8a6603"
                        android:id="@+id/button9"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:text="number of handles" />


                    <EditText
                        android:id="@+id/lblResultado"
                        android:layout_width="wrap_content"
                        android:layout_height="79dp"
                        android:ems="10"
                        android:inputType="textPersonName|number|numberSigned|numberDecimal|numberPassword" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="353dp"
                    android:layout_height="117dp"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textColor="#003300"
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Material"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="11dp"
                android:orientation="horizontal"></LinearLayout>

            <Spinner
                android:id="@+id/cmbMaterial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="#003300"
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tipo"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cmbTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="#003300"
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Dije"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cmbDije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="#880000"
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Pago"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cmbpago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="#880000"
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Resultado"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:layout_weight="0.09"
                    android:onClick="calcular"
                    android:text="@string/Calcular"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <Button
                    android:id="@+id/button13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.12"
                    android:text="@string/Borrar"
                    style="@style/Widget.AppCompat.Button.Colored"
                    />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
